[gd_scene load_steps=12 format=2]

[ext_resource path="res://Textures/Themes/BottombuttonTheme.tres" type="Theme" id=1]
[ext_resource path="res://Textures/Themes/PanelTabTheme.tres" type="Theme" id=2]
[ext_resource path="res://Scripts/GUI.gd" type="Script" id=3]
[ext_resource path="res://Scripts/CardContainer.gd" type="Script" id=4]
[ext_resource path="res://Textures/Images/TabsIcons/chart-histogram.png" type="Texture" id=5]
[ext_resource path="res://Textures/Images/TabsIcons/clock.png" type="Texture" id=6]
[ext_resource path="res://Textures/Images/TabsIcons/menu-burger.png" type="Texture" id=7]
[ext_resource path="res://Textures/Images/SmallIcons/download.png" type="Texture" id=8]
[ext_resource path="res://Textures/Images/SmallIcons/plus.png" type="Texture" id=9]
[ext_resource path="res://Textures/Images/SmallIcons/trash.png" type="Texture" id=10]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.745098, 0.745098, 0.780392, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 720, 1600 )
mouse_filter = 1
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 720, 1600 )
size_flags_vertical = 0
tab_align = 0
tabs_visible = false

[node name="Create" type="Panel" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 720, 1551 )
mouse_filter = 1

[node name="ButtonBox" type="VBoxContainer" parent="TabContainer/Create"]
margin_right = 130.0
margin_bottom = 1472.0

[node name="New" type="Button" parent="TabContainer/Create/ButtonBox"]
margin_top = 336.0
margin_right = 130.0
margin_bottom = 375.0
size_flags_vertical = 6
text = "New"
icon = ExtResource( 9 )

[node name="Delete" type="Button" parent="TabContainer/Create/ButtonBox"]
margin_top = 716.0
margin_right = 130.0
margin_bottom = 755.0
text = "Delete"
icon = ExtResource( 10 )

[node name="Save" type="Button" parent="TabContainer/Create/ButtonBox"]
margin_top = 1096.0
margin_right = 130.0
margin_bottom = 1135.0
size_flags_vertical = 6
text = "Save"
icon = ExtResource( 8 )

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Create"]
anchor_left = 0.194444
anchor_top = 0.01875
anchor_right = 0.944444
anchor_bottom = 0.61875
margin_bottom = 6.10352e-05
rect_min_size = Vector2( 540, 960 )
mouse_filter = 1
size_flags_horizontal = 3
custom_styles/bg = SubResource( 1 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Create/ScrollContainer"]
custom_constants/separation = 0
script = ExtResource( 4 )

[node name="CountLabel" type="Label" parent="TabContainer/Create"]
anchor_left = 0.94
anchor_top = 0.625
anchor_right = 0.94
anchor_bottom = 0.625
margin_left = -139.8
margin_right = 0.199951
margin_bottom = 40.0
text = "Count : 0"

[node name="Timing" type="Panel" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Training" type="Tabs" parent="TabContainer"]
visible = false
margin_right = 40.0
margin_bottom = 24.0

[node name="Graph" type="Tabs" parent="TabContainer"]
visible = false
margin_right = 40.0
margin_bottom = 24.0

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -130.0
margin_bottom = -2.0
rect_min_size = Vector2( 720, 128 )
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 716.0
margin_bottom = 124.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )

[node name="Create" type="Button" parent="MarginContainer/HBoxContainer"]
margin_right = 175.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Create"
icon = ExtResource( 7 )

[node name="Timing" type="Button" parent="MarginContainer/HBoxContainer"]
margin_left = 179.0
margin_right = 354.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
text = "Timing"
icon = ExtResource( 6 )

[node name="Trainings" type="Button" parent="MarginContainer/HBoxContainer"]
margin_left = 358.0
margin_right = 533.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Trainings"
icon = ExtResource( 7 )

[node name="Graph" type="Button" parent="MarginContainer/HBoxContainer"]
margin_left = 537.0
margin_right = 712.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Graph"
icon = ExtResource( 5 )

[connection signal="pressed" from="TabContainer/Create/ButtonBox/New" to="TabContainer/Create/ScrollContainer/VBoxContainer" method="_on_New_pressed"]
[connection signal="pressed" from="TabContainer/Create/ButtonBox/Delete" to="TabContainer/Create/ScrollContainer/VBoxContainer" method="_on_Delete_pressed"]
[connection signal="pressed" from="TabContainer/Create/ButtonBox/Save" to="TabContainer/Create/ScrollContainer/VBoxContainer" method="_on_Save_pressed"]
[connection signal="gui_input" from="TabContainer/Create/ScrollContainer" to="TabContainer/Create/ScrollContainer/VBoxContainer" method="_on_ScrollContainer_gui_input"]
[connection signal="button_up" from="MarginContainer/HBoxContainer/Create" to="." method="_on_Create_button_up"]
[connection signal="button_up" from="MarginContainer/HBoxContainer/Timing" to="." method="_on_Timing_button_up"]
[connection signal="button_up" from="MarginContainer/HBoxContainer/Trainings" to="." method="_on_Trainings_button_up"]
[connection signal="button_up" from="MarginContainer/HBoxContainer/Graph" to="." method="_on_Graph_button_up"]
